

BUG FIXES

    o	winDialog() and winDialogString() check that they are being
	used in an interactive session.

    o	The Korean translation of the RGui menus has been corrected
    	and restored.  (Thanks to June Kim and Seung-ho Kang.)
    	
    o	The list of hives in the readRegistry() defaults contained
    	a typo; error messages were incomplete. (PR#12937)



	**************************************************
	*						 *
	*	       2.7 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.7.2 patched


BUG FIXES

    o	iconv() was incorrectly identifying R running in an Eastern
	European locale as using ISO-8859-2 (aka Latin-2) rather than
	CP1250: they differ in the positions of some characters,
	notably s and z with caron.  This was seen in tcltk output
	from Rcmdr in 2.7.x, but might have occurred elsewhere (and
	earlier).

	This also affected localeToCharset() which incorrectly
	returned "ISO8859-2".

	The same issue seems to have caused problems with starting
	R 2.7.x in the Chinese (Hong Kong S.A.R.) locale on some
	systems (e.g. PR#12658): the problems were with locale names
	which contained periods.

    o	dir.create(recursive = TRUE) was not working on //server/share
	paths.

    o	The clip region was sometimes wrong when printing from the
	menu on a windows() graphics device (in 2.7.2 only).

    o	The windows() device would sometimes ignore font family
    	requests (PR#12931).	



		CHANGES IN R VERSION 2.7.2


NEW FEATURES

    o	Rgui has a new menu item 'Html search page' on the Help menu,
	which goes directly to the HTML search form.  This is needed
	by users of Firefox 3, which generates incorrect links in
	search results when the page is accessed via the 'Html help'
	menu item (or via help.start()).


BUG FIXES

    o	Saving a graph in TIFF format could crash R (PR#11804).
    
    o	Rterm in interactive use did not implement R_FlushConsole() fully.
